--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <style>
             @font-face {
                 font-family: "Hack";
-                src: url("./fonts/Hack-Regular.ttf");
+                src: url("fonts/Hack-Regular.ttf");
             }
             body {
                 margin: 0;
