--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Brynley's Socials!</title>
         <link rel="icon" href="images/reddit.svg" type="image/x-icon">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <style>
             @font-face {
                 font-family: "Hack";
