--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 flex-direction: column;
                 justify-content: center;
 
-                flex: 0 0 8em;
+                flex: 0 0 10em;
                 padding: 0.75em;
                 border-radius: 1em;
 
@@ -34,7 +34,7 @@
             }
             .social {
                 display: flex;
-                justify-content: space-between;
+                justify-content: space-around;
                 align-items: center;
 
                 padding: 0.75em;
@@ -67,6 +67,10 @@
                     <img class="social-image" src="images/reddit.svg"/>
                     Reddit
                 </a>
+                <a class="social" href="https://open.spotify.com/user/m02j6i534xcqsrssq2r63m3tl">
+                    <img class="social-image" src="images/spotify.svg"/>
+                    Spotify
+                </a>
                 <a class="social" href="https://steamcommunity.com/id/brynblack">
                     <img class="social-image" src="images/steam.svg"/>
                     Steam
@@ -74,6 +78,10 @@
                 <a class="social" href="https://twitch.tv/brynblack">
                     <img class="social-image" src="images/twitch.svg"/>
                     Twitch
+                </a>
+                <a class="social" href="https://www.youtube.com/channel/UC2Opq0nr7VzgibyOosR1cPQ">
+                    <img class="social-image" src="images/youtube.svg"/>
+                    YouTube
                 </a>
             </div>
         </div>
