Added space between links

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
             .socials-box {
                 display: flex;
                 flex-direction: column;
-                justify-content: center;
+                justify-content: space-between;
+
+                height: 24em;
 
                 flex: 0 0 10em;
                 padding: 0.75em;
