Removed useless closing slashes

--- a/index.html
+++ b/index.html
@@ -62,27 +62,27 @@
         <div class="center-container">
             <div class="socials-box">
                 <a class="social" href="https://github.com/brynblack">
-                    <img class="social-image" src="images/github.svg"/>
+                    <img class="social-image" src="images/github.svg">
                     GitHub
                 </a>
                 <a class="social" href="https://reddit.com/u/brynblack">
-                    <img class="social-image" src="images/reddit.svg"/>
+                    <img class="social-image" src="images/reddit.svg">
                     Reddit
                 </a>
                 <a class="social" href="https://open.spotify.com/user/m02j6i534xcqsrssq2r63m3tl">
-                    <img class="social-image" src="images/spotify.svg"/>
+                    <img class="social-image" src="images/spotify.svg">
                     Spotify
                 </a>
                 <a class="social" href="https://steamcommunity.com/id/brynblack">
-                    <img class="social-image" src="images/steam.svg"/>
+                    <img class="social-image" src="images/steam.svg">
                     Steam
                 </a>
                 <a class="social" href="https://twitch.tv/brynblack">
-                    <img class="social-image" src="images/twitch.svg"/>
+                    <img class="social-image" src="images/twitch.svg">
                     Twitch
                 </a>
                 <a class="social" href="https://www.youtube.com/channel/UC2Opq0nr7VzgibyOosR1cPQ">
-                    <img class="social-image" src="images/youtube.svg"/>
+                    <img class="social-image" src="images/youtube.svg">
                     YouTube
                 </a>
             </div>
