Clipped x-overflow due to viewport width issue

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     background-color: #322f32;
     display: flex;
     min-height: 100vh;
+    overflow-x: clip;
     justify-content: center;
     margin: 0;
     min-width: 100vw;
