--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
     <img src="images/github.svg" alt="GitHub Logo">
     GitHub
   </a>
+  <a href="https://tech.lgbt/@brynblack" rel="me">
+    <img src="images/mastodon.svg" alt="Mastodon Logo">
+    Mastodon
+  </a>
   <a href="https://reddit.com/u/brynblack">
     <img src="images/reddit.svg" alt="Reddit Logo">
     Reddit
